--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>TinDog</title>
+  <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,900|Ubuntu&display=swap" rel="stylesheet">
+  <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
@@ -44,13 +46,13 @@
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
 
         <div class="col-lg-6">
           <div>
-            <img src="images/iphone6.png" alt="iphone-mockup">
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
           </div>
         </div>
       </div>
@@ -61,21 +63,25 @@
   <!-- Features -->
 
   <section id="features">
-
+<div class="container-fluid">
     <div class="row">
       <div class="col">
+          <i class="fas fa-check-circle features-icon"></i>
         <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="col">
+          <i class="fas fa-bullseye features-icon"></i>
         <h3>Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col">
+          <i class="fas fa-heart features-icon"></i>
         <h3>Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
+  </div>
     <!---</div>---->
 
 
@@ -85,7 +91,7 @@
 
 
   <!-- Testimonials -->
-
+<div class="container-fluid">
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
@@ -95,25 +101,25 @@
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
-
+  </div>
   </section>
 
 
   <!-- Press -->
-
+<div class="container-fluid">
   <section id="press">
     <img src="images/techcrunch.png" alt="tc-logo">
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
     <img src="images/mashable.png" alt="mashable-logo">
-
+  </div>
   </section>
 
 
   <!-- Pricing -->
 
   <section id="pricing">
-
+    <div class="container-fluid">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
@@ -144,7 +150,7 @@
       </div>
     </div>
     </div>
-
+  </div>
 
 
 
@@ -157,13 +163,13 @@
 
 
   <!-- Call to Action -->
-
+<div class="container-fluid">
   <section id="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
-
+  
   </section>
 
 
@@ -174,7 +180,8 @@
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
-
+</div>
+<!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
@@ -184,6 +191,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+  <!-- Font Awesome Scripts -->
+  <script src="https://kit.fontawesome.com/8b8bfffaee.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
