--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 
   <section id="features">
 <div class="container-fluid">
-    <div class="row">
-      <div class="col">
+    <div class="row features-row">
+      <div class="col-lg-4 col-md-12 features-column">
           <i class="fas fa-check-circle features-icon"></i>
         <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-md-12 features-column">
           <i class="fas fa-bullseye features-icon"></i>
         <h3>Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-md-12 features-column">
           <i class="fas fa-heart features-icon"></i>
         <h3>Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
