--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -199,12 +199,15 @@
 
 
   <!-- Call to Action -->
-  <div class="container-fluid">
+ 
     <section id="cta">
 
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+        Download</button>
+      <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>
+        Download</button>
+      
 
     </section>
 
@@ -212,11 +215,14 @@
     <!-- Footer -->
 
     <footer id="footer">
-
+      <i class="social-icon fab fa-facebook-square"></i>
+      <i class="social-icon fab fa-twitter-square"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon far fa-envelope"></i>
       <p>© Copyright 2018 TinDog</p>
 
     </footer>
-  </div>
+  
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
